--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -14,6 +14,13 @@
         android:layout_height="wrap_content"
         android:text="@string/instructions" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/joke_button"
         android:layout_width="wrap_content"
